--- a/css/app.css
+++ b/css/app.css
@@ -1,8 +1,14 @@
+@font-face {
+	src:url(font/Quicksand-Regular.otf);
+	font-family: Quicksand-Regular;
+}
+
 body {
 	background: #fff;
 	background-image: url("../pic/bg.jpg");
 	background-size: 100% 100%;
 	overflow: hidden;
+	font-family: Quicksand-Regular;
 }
 div#memory_board{
 	background:rgba(0,0,255,0.5);
@@ -27,5 +33,33 @@ div#memory_board > div{
 .level {
   height: 10rem;
   width: 10rem;
-  font-size: 7rem;
+  font-size: 5rem;
+	font-family: Quicksand-Regular;
+}
+
+.block {
+	display: block;
+}
+
+.level .block {
+	font-size: 1rem;
+}
+
+.page-container {
+	margin-top: 2rem;
+}
+
+.title h2 {
+	font-family: Quicksand-Regular;
+	font-weight: bold;
+	letter-spacing: -0.10rem;
+} 
+
+.disabled {
+	cursor: not-allowed !important;
+	background-color: #607d8b !important;
+}
+.disabled:hover,
+.disabled:focus {
+	background-color: #546e7a !important;
 }
