--- a/css/app.css
+++ b/css/app.css
@@ -46,14 +46,22 @@ div#memory_board > div{
 }
 
 .page-container {
-	margin-top: 2rem;
+	margin-top: 1rem;
 }
 
-.title h2 {
+.title h3 {
 	font-family: Quicksand-Regular;
 	font-weight: bold;
 	letter-spacing: -0.10rem;
 } 
+
+.title img {
+	display: inline-block;
+	width: 3rem;
+	height: 3rem;
+	vertical-align: middle;
+	margin-right: 0.5rem;
+}
 
 .disabled {
 	cursor: not-allowed !important;
@@ -63,3 +71,5 @@ div#memory_board > div{
 .disabled:focus {
 	background-color: #546e7a !important;
 }
+
+.title
