--- a/css/app.css
+++ b/css/app.css
@@ -10,22 +10,22 @@ body {
 	overflow: hidden;
 	font-family: Quicksand-Regular;
 }
-div#memory_board{
+#memory_board{
 	background:rgba(0,0,255,0.5);
-	width:600px;
-	height:540px;
-	padding:24px;
+	padding: 1rem;
+	width: 50%;
 	margin:0px auto;
 }
 div#memory_board > div{
-	background: url(oo.jpg) no-repeat;
-	border:#000 1px solid;
-	width:71px;
-	height:71px;
+	background: #607d8b;
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	width:7rem;
+	height:7rem;
 	float:left;
-	margin:10px;
-	padding:20px;
-	font-size:64px;
+	margin: 0.5rem;
+	padding:1rem;
 	cursor:pointer;
 	text-align:center;
 }
@@ -72,4 +72,3 @@ div#memory_board > div{
 	background-color: #546e7a !important;
 }
 
-.title
